--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "firebase": "^8.0.1",
     "material-design-icons-iconfont": "^6.1.0",
+    "mathjax": "^3.1.2",
+    "mathjax-full": "^3.1.2",
+    "mathjax-img": "^3.0.0",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-code-highlight": "^0.7.6",
     "vue-mathjax": "0.0.11",
+    "vue-prism-component": "^1.2.0",
+    "vue-prismjs": "^1.2.0",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
